Bug fixes: increased z-index so other theme elements won't overlay the pop-up + more

--- a/extensions/pop-games-extension/assets/pop-up.css
+++ b/extensions/pop-games-extension/assets/pop-up.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: rgb(0, 0, 0, 0.3);
-  z-index: 99; /* Below the pop-up */
+  z-index: 9999; /* Below the pop-up */
   display: block;
 }
 
@@ -21,7 +21,7 @@
     border: 4px solid hsl(0, 100%, 50%);
     animation: rainbow 10s infinite alternate;
     -webkit-animation: rainbow 10s infinite alternate;
-    z-index: 100;
+    z-index: 10000;
     background: #fff;
 }
 
@@ -51,7 +51,7 @@
     width: 30px;
     /*top: 10px;
     right: 10px;*/
-    z-index: 102;
+    z-index: 10002;
     margin-left: 93%;
   }
 
@@ -63,7 +63,7 @@
     right: 2px;
     margin-bottom: 120%;
     /*margin-left: 92%;*/
-    z-index: 102;
+    z-index: 10002;
   }
 
   #exitButton {
@@ -132,10 +132,9 @@
     justify-content: center;
   }
 
-  /*#optOut {
-    margin-top: 20px;
-    top: 5px;
-  }*/
+  #optOut {
+    margin-left: 2px;
+  }
 
   #discountText {
     font-size: 16px;
@@ -220,7 +219,7 @@
     background-color: #fff; 
     border: none;
     font: inherit;
-    z-index: 100;
+    z-index: 10000;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -236,7 +235,7 @@
     font: inherit;
     cursor: pointer;
     outline: inherit;
-    z-index: 100;
+    z-index: 10000;
     transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
   }
 
@@ -253,7 +252,7 @@
     align-items: center;
     justify-content: center;
     height: 17.25%;
-    z-index: 100;
+    z-index: 10000;
     margin-top: 11.85%;
     margin-bottom: 5.85%;
   }
@@ -268,7 +267,7 @@
     align-items: center;
     justify-content: center;
     height: 17.25%;
-    z-index: 100;
+    z-index: 10000;
     margin-top: 14.5%;
     margin-bottom: 3.15%;
   }
@@ -287,7 +286,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    z-index: 102;
+    z-index: 10002;
     bottom: 1%;
   }
 
@@ -299,7 +298,7 @@
   #wordGameImg {
     position: fixed;
     height: 95%;
-    z-index: 101;
+    z-index: 10001;
     filter: blur(3px);
     bottom: 5%;
   }
@@ -309,7 +308,7 @@
     display: none;
     height: 100%;
     width: 50%;
-    z-index: 101;
+    z-index: 10001;
     /*filter: blur(3px);*/
   }
 
@@ -322,7 +321,7 @@
   }
 
   #actionButtonContainer {
-    z-index: 100;
+    z-index: 10000;
     margin-top: 11.85%;
     margin-bottom: 4%;
   }
@@ -355,7 +354,7 @@
   #emailForm {
     padding: 1.25%;
     border: none;
-    z-index: 100;
+    z-index: 10000;
     text-align: center;
     margin-top: 8.85%;
     margin-bottom: 5.85%;
@@ -375,6 +374,7 @@
     border: 1px solid #ccc;
     margin-bottom: 2%;
     font-size: 16px;
+    color: #d2d2d2 !important;
   }
 
   #emailForm button[type="button"] {
@@ -447,7 +447,7 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    z-index: 100;
+    z-index: 10000;
     justify-content: center;
 }
 
@@ -456,7 +456,7 @@
     height: 40px;
     margin: 1px;
     border: 1px solid lightgray;
-    z-index: 100;
+    z-index: 10000;
 
     /* Text */
     font-size: 16px;
@@ -471,7 +471,7 @@
     height: 40px;
     margin: 1px;
     border: 1px solid lightgray;
-    z-index: 100;
+    z-index: 10000;
 
     /* Text */
     font-size: 16px;
@@ -541,7 +541,7 @@
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 8px;
   border: 1px solid lightgray;
-  z-index: 102;
+  z-index: 10002;
   flex-direction: column;
   justify-content: center;
   align-items: center;
